수정 내용 설명

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "PandaDuck Fix - 게임패드 수리 서비스",
   "short_name": "PandaDuck Fix",
-  "description": "프로 게이머를 위한 전문 듀얼센스 컨트롤러 수리 및 커스터마이징 서비스",
+  "description": "게이머를 위한 전문 듀얼센스 컨트롤러 수리 및 커스터마이징 서비스",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -57,6 +57,9 @@
       "purpose": "any maskable"
     }
   ],
-  "categories": ["business", "utilities"],
+  "categories": [
+    "business",
+    "utilities"
+  ],
   "prefer_related_applications": false
 }
