--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@
 
 VITE_SUPABASE_URL=your-project-url-here
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
+
+# Supabase Project ID (for type generation)
+# Extract from your Supabase URL: https://[PROJECT_ID].supabase.co
+# Used by: npm run types:generate
+SUPABASE_PROJECT_ID=your-project-id-here
